--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "body-parser": "^1.18.1",
     "compression": "^1.7.0",
     "express": "^4.15.4",
-    "mongoose": "^4.11.9",
-    "nodemon": "^1.12.0"
+    "express-session": "^1.15.5",
+    "mongoose": "^4.11.11",
+    "nodemon": "^1.12.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
