--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.1",
     "compression": "^1.7.0",
+    "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "mongoose": "^4.11.12",
